Cleaned up and updated last investigation

--- a/BMEG_310_Final_Project_P2.Rmd
+++ b/BMEG_310_Final_Project_P2.Rmd
@@ -19,8 +19,6 @@ output:
 
 # Load required libraries
 ```{r, results='hide'}
-#install.packages("factoextra")
-library(factoextra)
 library(DESeq2)
 library(pheatmap)
 library(ggplot2)
@@ -31,6 +29,7 @@ library(survminer)
 #library(org.Hs.eg.db)
 library(dplyr)
 library(tibble)
+library(biomaRt)   
 ```
 
 
@@ -312,506 +311,18 @@ print(table(cluster_df$Cluster_Label))
 cat("\n")
 
 ```
+###### Iinvestigation 3
 
-# ============================================================================
-# INVESTIGATION 2: High-Variance Gene Clustering
-# RQ 2.2: How does focusing on variable genes influence clustering?
-# ============================================================================
+###### Iinvestigation 4
 
-## GOAL: Determine if highly variable genes drive clustering patterns
-
-## Step 2.1: Identify top variable genes
-# TODO: Calculate variance for each gene (use log-transformed data)
-# TODO: Rank genes by variance
-# TODO: Select top 500 most variable genes
-# TODO: Create filtered expression matrix (500 genes x all samples)
-
-## Step 2.2: Visualize variable genes
-# TODO: Plot variance distribution across all genes
-# TODO: Highlight top 500 selected genes
-# TODO: Optional: heatmap of top variable genes
-
-## Step 2.3: Re-cluster with variable genes only
-# TODO: Calculate new distance matrix on 500-gene subset
-# TODO: Perform hierarchical clustering
-# TODO: Determine optimal k (may differ from Investigation 1)
-# TODO: Cut tree and assign new cluster labels
-
-## Step 2.4: Compare clustering results
-# TODO: Create confusion matrix: Investigation 1 clusters vs Investigation 2 clusters
-# TODO: Calculate adjusted Rand index (ARI) to measure agreement
-# TODO: Identify samples that switch clusters
-# TODO: PCA visualization with both cluster assignments
-
-## Step 2.5: Biological interpretation
-# TODO: Are variable gene clusters more/less distinct?
-# TODO: Does focusing on variable genes change cluster structure?
-# TODO: Which clustering is more biologically coherent?
-
-## CONCLUSION FOR RQ 2.2:
-# TODO: Report which genes show highest variability
-# TODO: Describe impact on clustering (stronger/weaker separation)
-# TODO: Recommend which gene set to use for downstream analyses
-# TODO: DECISION: Choose clustering result for Investigations 3-7
-
-# ============================================================================
-# INVESTIGATION 3: Differential Expression Analysis
-# RQ 2.3: Which genes are differentially expressed between clusters?
-# ============================================================================
-
-## GOAL: Identify marker genes that distinguish patient clusters
-
-## Step 3.1: Prepare data for DE analysis
-# TODO: Use original raw counts (not normalized/transformed)
-# TODO: Add cluster assignments to sample metadata
-# TODO: Verify cluster labels match sample order
-
-## Step 3.2: Set up DESeq2 for multi-group comparison
-# TODO: Create DESeq2 object with cluster as design variable
-# TODO: Run DESeq2 normalization and dispersion estimation
-# TODO: Fit negative binomial model
-
-## Step 3.3: Pairwise DE comparisons
-# TODO: Extract results for all pairwise cluster comparisons
-#       Example: If 3 clusters, test: 1vs2, 1vs3, 2vs3
-# TODO: For each comparison:
-#       - Extract results table
-#       - Apply significance thresholds (padj < 0.05, |log2FC| > 1)
-#       - Count number of DE genes
-#       - Separate upregulated vs downregulated
-
-## Step 3.4: Identify cluster-specific markers
-# TODO: Find genes uniquely upregulated in each cluster
-# TODO: Create Venn diagram of DE genes across comparisons
-# TODO: List top 10-20 marker genes per cluster (by log2FC or padj)
-
-## Step 3.5: Visualizations
-# TODO: Volcano plots for each pairwise comparison
-# TODO: MA plots to check for systematic bias
-# TODO: Heatmap of top DE genes across all samples
-# TODO: Boxplots for selected marker genes
-
-## Step 3.6: Functional annotation of DE genes
-# TODO: For each cluster's markers, note gene functions
-# TODO: Are markers enriched for specific biological processes?
-# TODO: Do markers make biological sense for phenotype differences?
-
-## CONCLUSION FOR RQ 2.3:
-# TODO: Report total number of DE genes between clusters
-# TODO: Highlight strongest marker genes for each cluster
-# TODO: Describe biological themes (immune, metabolic, proliferation, etc.)
-# TODO: Save DE results tables for pathway analysis
-
-# ============================================================================
-# INVESTIGATION 4: Pathway Enrichment Analysis
-# RQ 2.4: Which biological pathways are enriched in DE genes?
-# ============================================================================
-
-## GOAL: Identify functional pathways that differentiate clusters
-
-## Step 4.1: Define gene sets for enrichment
-# TODO: Filter DE genes by p-value threshold (use average p-value as cutoff)
-# TODO: For each cluster comparison, create list of significant genes
-# TODO: Consider separate analyses for up- vs down-regulated genes
-
-## Step 4.2: Gene ID conversion
-# TODO: Convert gene symbols to Entrez IDs (required for clusterProfiler)
-# TODO: Handle genes that fail to convert
-# TODO: Document conversion success rate
-
-## Step 4.3: GO enrichment analysis
-# TODO: Run enrichGO for Biological Process (BP)
-# TODO: Run enrichGO for Molecular Function (MF)
-# TODO: Run enrichGO for Cellular Component (CC)
-# TODO: Set significance threshold (padj < 0.05)
-# TODO: Specify background gene set (all expressed genes)
-
-## Step 4.4: KEGG pathway enrichment
-# TODO: Run enrichKEGG analysis
-# TODO: Set organism code (e.g., "hsa" for human)
-# TODO: Apply multiple testing correction
-
-## Step 4.5: Alternative pathway databases (optional)
-# TODO: Consider Reactome, MSigDB, WikiPathways
-# TODO: Disease-specific databases if relevant
-
-## Step 4.6: Visualizations
-# TODO: Dotplot of top enriched pathways (by p-value and gene ratio)
-# TODO: Barplot of enrichment scores
-# TODO: Network plot showing pathway relationships
-# TODO: Enrichment map connecting related pathways
-
-## Step 4.7: Cluster-specific pathway profiles
-# TODO: Compare enriched pathways across all clusters
-# TODO: Which pathways are unique to each cluster?
-# TODO: Which pathways are shared?
-# TODO: Create summary table of key pathways per cluster
-
-## Step 4.8: Biological interpretation
-# TODO: Do pathways align with known disease subtypes?
-# TODO: Are there actionable therapeutic targets?
-# TODO: Do pathways explain clinical differences?
-
-## CONCLUSION FOR RQ 2.4:
-# TODO: List top 5-10 pathways for each cluster
-# TODO: Describe biological themes (e.g., immune activation, cell cycle)
-# TODO: Highlight novel or unexpected pathway enrichments
-# TODO: Relate pathway findings back to DE genes from Investigation 3
-
-# ============================================================================
-# INVESTIGATION 5: Clinical Outcome Analysis
-# RQ 2.5: Do expression-based clusters differ in patient outcomes?
-# ============================================================================
-
-## GOAL: Determine if molecular clusters predict clinical outcomes
-
-## Step 5.1: Prepare survival data
-# TODO: Extract survival time and event status from clinical data
-# TODO: Verify data format (time = numeric, status = 0/1 or 1/2)
-# TODO: Handle missing or censored data appropriately
-# TODO: Add cluster assignments to survival data
-
-## Step 5.2: Descriptive statistics
-# TODO: Calculate median survival time per cluster
-# TODO: Count number of events (deaths/relapses) per cluster
-# TODO: Tabulate follow-up time distribution
-
-## Step 5.3: Kaplan-Meier survival analysis
-# TODO: Fit survival curves for each cluster
-# TODO: Plot Kaplan-Meier curves with confidence intervals
-# TODO: Add risk table showing n at risk over time
-# TODO: Customize plot aesthetics (colors, labels)
-
-## Step 5.4: Statistical testing
-# TODO: Perform log-rank test across all clusters
-# TODO: Report chi-square statistic and p-value
-# TODO: If >2 clusters, do pairwise log-rank tests with correction
-# TODO: Interpret significance of survival differences
-
-## Step 5.5: Cox proportional hazards model
-# TODO: Fit Cox model with cluster as predictor
-# TODO: Calculate hazard ratios (HR) for each cluster
-# TODO: Test proportional hazards assumption
-# TODO: Report HRs with 95% confidence intervals
-
-## Step 5.6: Multivariable survival analysis
-# TODO: Add clinical covariates (age, stage, sex) to Cox model
-# TODO: Determine if clusters remain prognostic after adjustment
-# TODO: Check for confounding or effect modification
-# TODO: Report adjusted HRs
-
-## Step 5.7: Survival prediction performance
-# TODO: Calculate concordance index (C-index) for cluster-based model
-# TODO: Compare to clinical-only model
-# TODO: Assess added prognostic value of molecular clusters
-
-## CONCLUSION FOR RQ 2.5:
-# TODO: Report whether clusters have significantly different outcomes
-# TODO: Identify high-risk vs low-risk clusters
-# TODO: Quantify magnitude of difference (median survival, HR)
-# TODO: State whether molecular clusters add prognostic value beyond clinical factors
-
-# ============================================================================
-# INVESTIGATION 6: Variability by Clinical Factors
-# RQ 2.6: Which genes exhibit the greatest variability in expression by age?
-# ============================================================================
-
-# Step 1: Calculate variance for each gene
-```{r}
-gene_vars <- apply(vst_counts, 1, var)
-
-cat("Total number of genes:", length(gene_vars), "\n")
-cat("Variance range:", range(gene_vars), "\n\n")
-```
-
-# Step 2: Examine variance distribution
-# To understand what a reasonable cutoff is
-```{r}
-summary(gene_vars)
-
-# Genes with variance > 0.5
-sum(gene_vars > 0.5)
-# Genes with variance > 0.3
-sum(gene_vars > 0.3)
-```
-
-# Reduce computational burden while retaining biologically relevant genes
-# Select top 10,000 genes by variance across all samples
-### Computationally feasible, tests enough genes to capture age-related variability (5000 was deemed too restrictive), removes very low-variance genes (likely noise)
-# Step 3: Select top 10000 most variable genes
-```{r}
-top_genes_10k <- names(sort(gene_vars, decreasing = TRUE))[1:10000]
-
-# Create subset matrices for downstream analysis
-expr_vst_top10k <- vst_counts[top_genes_10k, ]
-expr_z_top10k <- z_vst[top_genes_10k, ]
-
-cat("Filtered VST matrix dimensions:", dim(expr_vst_top10k), "\n")
-cat("Filtered Z-scored VST matrix dimensions:", dim(expr_z_top10k), "\n\n")
-```
-# Step 4: Matching expression data with age data
-```{r}
-# Extract age data from clinical information
-age_data <- data_clinical_patient[, c("PATIENT_ID", "AGE")]
-age_data <- age_data[!is.na(age_data$AGE), ]
-
-cat("Total patients with age data:", nrow(age_data), "\n")
-cat("Age range:", range(age_data$AGE), "\n")
-cat("Age distribution:\n")
-print(summary(age_data$AGE))
-
-# Create age groups for visualization and categorical analysis
-age_data$age_group <- cut(age_data$AGE, 
-                          breaks = c(0, 50, 60, 70, 100),
-                          labels = c("0-49", "50-59", "60-69", "70+"),
-                          include.lowest = TRUE)
-
-cat("\nAge group distribution:\n")
-print(table(age_data$age_group))
-
-# Match samples between expression and clinical data
-common_patients <- intersect(colnames(expr_vst_top10k), age_data$PATIENT_ID)
-cat("\nPatients in both datasets:", length(common_patients), "\n")
-
-# Filter and align both datasets
-expr_matched <- expr_vst_top10k[, common_patients]
-age_matched <- age_data[age_data$PATIENT_ID %in% common_patients, ]
-age_matched <- age_matched[match(colnames(expr_matched), age_matched$PATIENT_ID), ]
-
-# Verify alignment
-stopifnot(all(colnames(expr_matched) == age_matched$PATIENT_ID))
-cat("Data alignment verified!\n\n")
-```
-
-#Restart
-# STEP 1: Merge Cluster Assignments with Age Data
-```{r}
-# Extract age data from clinical information
-age_data <- data_clinical_patient[, c("PATIENT_ID", "AGE")]
-age_data <- age_data[!is.na(age_data$AGE), ]
-
-# Merge with cluster assignments
-age_cluster_data <- merge(cluster_df, age_data, by = "PATIENT_ID")
-
-cat("Total patients with both cluster and age data:", nrow(age_cluster_data), "\n")
-cat("Age range:", range(age_cluster_data$AGE), "\n\n")
-
-# Add age groups
-age_cluster_data$age_group <- cut(age_cluster_data$AGE, 
-                                   breaks = c(0, 40, 60, 80, 100),
-                                   labels = c("Young", "Middle", "Senior", "Elderly"),
-                                   include.lowest = TRUE)
-
-# Summary statistics by cluster
-#cat("=== Age Distribution by Cluster ===\n")
-#age_summary <- aggregate(AGE ~ Cluster_Label, data = age_cluster_data, 
-                         #FUN = function(x) c(Mean = mean(x), 
-                                             #SD = sd(x), 
-                                             #Median = median(x),
-                                             #Min = min(x),
-                                             #Max = max(x)))
-#print(age_summary)
-#cat("\n")
-
-```
-
-
-
-
-## GOAL: Characterize clinical profiles of molecular clusters
-
-## Step 6.1: Prepare clinical data
-# TODO: Merge cluster assignments with clinical data
-# TODO: Identify all available clinical variables
-# TODO: Classify variables as continuous vs categorical
-# TODO: Handle missing data (document and decide on exclusion/imputation)
-
-## Step 6.2: Continuous variables analysis
-# TODO: For each continuous variable (age, BMI, lab values):
-#       - Test normality within each cluster (Shapiro-Wilk)
-#       - Choose appropriate test: ANOVA (normal) or Kruskal-Wallis (non-normal)
-#       - Calculate test statistic and p-value
-#       - Perform post-hoc pairwise tests if significant
-# TODO: Create summary table with mean/median per cluster
-
-## Step 6.3: Visualize continuous variables
-# TODO: Boxplots for each variable by cluster
-# TODO: Violin plots showing distributions
-# TODO: Add statistical annotations (p-values)
-
-## Step 6.4: Categorical variables analysis
-# TODO: For each categorical variable (sex, stage, race, etc.):
-#       - Create contingency table (cluster x category)
-#       - Perform chi-square or Fisher's exact test
-#       - Calculate Cramér's V for effect size
-#       - Report observed vs expected frequencies
-# TODO: Create summary table with proportions per cluster
-
-## Step 6.5: Visualize categorical variables
-# TODO: Stacked or grouped bar plots showing proportions
-# TODO: Mosaic plots for complex cross-tabulations
-# TODO: Highlight significant associations
-
-## Step 6.6: Disease stage/grade analysis
-# TODO: Test if clusters associate with disease severity
-# TODO: Are certain clusters enriched for advanced stage?
-# TODO: Calculate odds ratios for stage by cluster
-
-## Step 6.7: Multiple testing correction
-# TODO: Adjust p-values for multiple comparisons (Bonferroni or FDR)
-# TODO: Report both raw and adjusted p-values
-# TODO: Interpret significance after correction
-
-## Step 6.8: Multivariate analysis
-# TODO: Use multinomial logistic regression (cluster as outcome)
-# TODO: Include multiple clinical predictors simultaneously
-# TODO: Identify independent clinical predictors of cluster membership
-
-## Step 6.9: Clinical cluster profiling
-# TODO: Create comprehensive profile for each cluster
-# TODO: Example: "Cluster 1: younger, more female, early stage"
-# TODO: Identify clinically distinct subtypes
-
-## CONCLUSION FOR RQ 2.6:
-# TODO: Summarize which clinical variables differ significantly
-# TODO: Describe clinical profile of each cluster
-# TODO: Assess whether clusters represent clinically meaningful subtypes
-# TODO: Discuss implications for patient stratification
-
-# ============================================================================
-# INVESTIGATION 7: Mutation Enrichment Analysis
-# RQ 2.7: Are specific mutations enriched in particular clusters?
-# ============================================================================
-
-## GOAL: Link genetic alterations to expression-based subtypes
-
-## Step 7.1: Prepare mutation data
-# TODO: Ensure mutation data matches sample IDs in expression data
-# TODO: Verify mutation format (binary, count, or VAF)
-# TODO: Document mutation prevalence (% samples affected per mutation)
-# TODO: Merge cluster assignments with mutation data
-
-## Step 7.2: Individual mutation testing
-# TODO: For each mutation:
-#       - Create 2x2 or 2xK contingency table (mutation x cluster)
-#       - Perform Fisher's exact test (if small counts) or chi-square
-#       - Calculate odds ratios for mutation in each cluster
-#       - Record p-value and effect size
-# TODO: Create results table for all mutations tested
-
-## Step 7.3: Multiple testing correction
-# TODO: Adjust p-values across all mutation tests (FDR/Bonferroni)
-# TODO: Identify mutations with significant enrichment after correction
-# TODO: Rank mutations by significance
-
-## Step 7.4: Visualize mutation enrichment
-# TODO: Heatmap showing mutation frequency per cluster
-# TODO: Bar plots for significantly enriched mutations
-# TODO: Stacked bar plots showing proportion mutated per cluster
-# TODO: Consider oncoplot-style visualization
-
-## Step 7.5: Cluster-specific mutation profiles
-# TODO: For each cluster, list enriched mutations
-# TODO: Calculate enrichment fold-change vs other clusters
-# TODO: Identify mutually exclusive or co-occurring mutations
-
-## Step 7.6: Mutation burden analysis
-# TODO: Calculate total mutation count per sample
-# TODO: Test if clusters differ in overall mutation burden
-# TODO: Use ANOVA or Kruskal-Wallis test
-# TODO: Visualize with boxplots
-
-## Step 7.7: Pathway-level mutation analysis
-# TODO: Group mutations by affected pathway (e.g., TP53, RAS, PI3K)
-# TODO: Test pathway-level enrichment in clusters
-# TODO: Does cluster with pathway X mutations have pathway X expression changes?
-
-## Step 7.8: Mutation-expression correlation
-# TODO: For enriched mutations, examine expression of mutated gene
-# TODO: Do mutations correlate with gene expression changes?
-# TODO: Are there compensatory expression changes?
-
-## Step 7.9: Integration with DE genes
-# TODO: Cross-reference with Investigation 3 results
-# TODO: Do clusters with specific mutations show corresponding expression signatures?
-# TODO: Example: Are TP53-mutated samples in a specific cluster with p53 pathway dysregulation?
-
-## Step 7.10: Biological interpretation
-# TODO: Do mutation patterns explain molecular subtypes?
-# TODO: Are there known oncogenic driver mutations enriched in clusters?
-# TODO: Do findings suggest distinct disease etiologies?
-
-## CONCLUSION FOR RQ 2.7:
-# TODO: List mutations significantly enriched in each cluster
-# TODO: Report magnitude of enrichment (OR, fold-change)
-# TODO: Describe mutation-based characterization of each cluster
-# TODO: Discuss whether mutations drive observed expression differences
-# TODO: Identify potential therapeutic vulnerabilities based on mutations
-
-# ============================================================================
-# STEP 3: INTEGRATED SYNTHESIS AND FINAL CONCLUSIONS
-# ============================================================================
-
-## Step 3.1: Cross-investigation integration
-# TODO: Create comprehensive table summarizing all clusters:
-#       - Size, marker genes, pathways, outcome, clinical features, mutations
-# TODO: Develop unified narrative for each cluster
-# TODO: Name clusters based on characteristics (e.g., "Immune-hot", "Proliferative")
-
-## Step 3.2: Validate findings
-# TODO: Check consistency across investigations
-# TODO: Do DE genes align with enriched pathways?
-# TODO: Do mutations explain expression patterns?
-# TODO: Are clinical features consistent with molecular profiles?
-
-## Step 3.3: Biological coherence
-# TODO: Assess whether clusters represent biologically distinct subtypes
-# TODO: Compare to known disease classifications or published subtypes
-# TODO: Discuss novelty or confirmation of findings
-
-## Step 3.4: Clinical relevance
-# TODO: Identify actionable clusters (targetable pathways/mutations)
-# TODO: Recommend cluster-specific treatment strategies
-# TODO: Suggest prognostic biomarkers based on cluster membership
-
-## Step 3.5: Limitations and caveats
-# TODO: Document sample size limitations
-# TODO: Note any batch effects or technical confounders
-# TODO: Acknowledge multiple testing burden
-# TODO: Discuss generalizability
-
-## Step 3.6: Future directions
-# TODO: Suggest validation in independent cohort
-# TODO: Propose functional experiments to test hypotheses
-# TODO: Recommend additional molecular data types (methylation, proteomics)
-
-## FINAL DELIVERABLES:
-# TODO: Summary figure showing cluster characteristics
-# TODO: Supplementary tables with all statistical results
-# TODO: Write methods section documenting all analyses
-# TODO: Prepare results section with key findings per RQ
-
-# ============================================================================
-# END OF TEMPLATE
-# ============================================================================
-
-
-#Investigation 8
-
-```{r}
-library(ggplot2)
-library(pheatmap)
-library(biomaRt)   
-library(dplyr)
-```
-
+########Investigation 5
 ```{r}
 #Clean Ensembl IDs and map to gene symbols
 
 # Remove version numbers from Ensembl IDs
-clean_ids <- sub("\\..*", "", rownames(log_norm_counts))
-rownames(log_norm_counts) <- clean_ids
-rownames(z_log) <- clean_ids
+clean_ids <- sub("\\..*", "", rownames(vst_counts))
+rownames(vst_counts) <- clean_ids
+rownames(z_vst) <- clean_ids
 
 # Get gene symbols from Ensembl
 mart <- useMart("ensembl", dataset = "hsapiens_gene_ensembl")
@@ -823,8 +334,8 @@ mapping <- getBM(
 )
 
 # Convert to gene symbols
-expr_df <- as.data.frame(log_norm_counts) %>%
-  mutate(ensembl_gene_id = rownames(log_norm_counts)) %>%
+expr_df <- as.data.frame(vst_counts) %>%
+  mutate(ensembl_gene_id = rownames(vst_counts)) %>%
   left_join(mapping, by = "ensembl_gene_id") %>%
   filter(hgnc_symbol != "") %>%
   distinct(hgnc_symbol, .keep_all = TRUE)
@@ -833,8 +344,8 @@ rownames(expr_df) <- expr_df$hgnc_symbol
 expr_symbol <- as.matrix(expr_df[, -c(ncol(expr_df)-1, ncol(expr_df))])
 
 # Same for z-scores
-z_df <- as.data.frame(z_log) %>%
-  mutate(ensembl_gene_id = rownames(z_log)) %>%
+z_df <- as.data.frame(z_vst) %>%
+  mutate(ensembl_gene_id = rownames(z_vst)) %>%
   left_join(mapping, by = "ensembl_gene_id") %>%
   filter(hgnc_symbol != "") %>%
   distinct(hgnc_symbol, .keep_all = TRUE)
